--- a/main.html
+++ b/main.html
@@ -58,10 +58,14 @@
 							alt="red apple"></li>
 				</ul>
 			</div>
-			<div class="description">
-				
+			<div class="description">BENIFITS
+				<ul>
+					<li>Apple is a good fruit for humans.</li>
+						<li>Apple is a good for health. </li>
+				</ul>
 			</div>
 		</div>
+		<button>Add to Card</button>
 	</section>
 </body>
 
