--- a/main.html
+++ b/main.html
@@ -58,14 +58,14 @@
 							alt="red apple"></li>
 				</ul>
 			</div>
-			<div class="description">BENIFITS
+			<div class="description">BENEFITS
 				<ul>
 					<li>Apple is a good fruit for humans.</li>
 						<li>Apple is a good for health. </li>
 				</ul>
 			</div>
 		</div>
-		<button>Add to Card</button>
+		<button class="add-to-cart">Add to Cart</button>
 	</section>
 </body>
 
