--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
 				</ul>
 			</div>
 		</div>
-		<button class="add-to-cart">Add to Cart</button>
+		<button class="add-to-cart">ADD TO CART</button>
 	</section>
 </body>
 
